# morsecode

./: README.md  pyproject.toml
mymorsecode/: audio.py  morse.py
